# multi-agent-hazard-detection

./: .gitignore  Dockerfile  README.md  requirements.txt
code/src/: README.md
code/src/aerial_agent/: CMakeLists.txt  MANIFEST.in  ReadMe.md  package.xml  setup.py
code/src/aerial_agent/aerial_agent/nodes/: crazyflie_patrol_node.py  hazard_detection_node.py  notifier_node.py  tf_publisher_node.py  toxicity_measurement_node.py
code/src/aerial_agent/config/: patrol_waypoints.yaml  patrol_waypoints_capture_pics.yaml
code/src/aerial_agent/launch/: aerial_nodes_launch.py
code/src/aerial_agent/models/crazyflie/: model.sdf
code/src/aerial_agent/scripts/: crazyflie_patrol_node  hazard_detection_node  notifier_node  tf_publisher_node  toxicity_measurement_node
code/src/ground_agent/: CMakeLists.txt  MANIFEST.in  package.xml  setup.py
code/src/ground_agent/ai_models/: ReadME.md
code/src/ground_agent/config/: agilex_diff_drive_controller.yaml  nav2_params_agilex.yaml  tf_qos.yaml  ukf_agilex.yaml
code/src/ground_agent/ground_agent/nodes/: dust_plume_density_estimation_node.py  dust_sensor_relay_node.py  fibrous_hazard_orbit_twist_commander_node.py  gps_covariance_injector_node.py  imu_covariance_injector_node.py  initial_inspection_node.py  mission_handler_node.py  navigation_node.py  on_arrival_task_node.py  path_planner_node.py  tf_listener_node.py  tf_publisher_node.py  twist_relay_node.py  wait_for_tf_node.py
code/src/ground_agent/launch/: ground_nodes_launch.py  localization_agilex.launch.py  navigation_agilex.launch.py
code/src/ground_agent/models/agilex/: NOTICE  model.config  model.sdf
code/src/ground_agent/models/agilex_sawyer/: model.config  model.sdf
code/src/ground_agent/scripts/: dust_plume_density_estimation_node  dust_sensor_relay_node  fibrous_hazard_orbit_twist_commander_node  gps_covariance_injector_node  imu_covariance_injector_node  initial_inspection_node  mission_handler_node  navigation_node  on_arrival_task_node  path_planner_node  tf_listener_node  tf_publisher_node  twist_relay_node  wait_for_tf_node
code/src/ground_agent/urdfs/: agilex.urdf
code/src/ground_agent/worlds/: mining_terrain_map.yaml
code/src/material_handling_agent/: CMakeLists.txt  MANIFEST.in  package.xml  setup.py
code/src/material_handling_agent/ai_models/: ReadMe.md
code/src/material_handling_agent/config/: combined_ore_sequence.yaml
code/src/material_handling_agent/material_handling_agent/nodes/: conveyor_classifier_slideshow_node.py  conveyor_classifier_slow_scroll_node.py
code/src/material_handling_agent/scripts/: conveyor_classifier.py  conveyor_classifier_slideshow_node  conveyor_classifier_slow_scroll_node  generate_annotated_images_video.py
code/src/material_handling_agent/video/: ReadMe.md
code/src/multi_agent/: CMakeLists.txt  MANIFEST.in  package.xml
code/src/multi_agent/launch/: multi_agent_launch.py
code/src/multi_agent/models/: ReadMe.md
code/src/multi_agent/models/hazard_overlays/asbestos_marker/: model.config  model.sdf
code/src/multi_agent/models/hazard_overlays/dust_plume_marker/: model.config  model.sdf
code/src/multi_agent/models/hazard_overlays/toxic_gas_marker/: model.config  model.sdf
code/src/multi_agent/models/mining_terrain_overlay/: model.config  model.sdf
code/src/multi_agent/models/mining_terrain_overlay/meshes/: mining_terrain_scaled_reversed_clean.dae
code/src/multi_agent/models/wall/: model.config  model.sdf
code/src/multi_agent/rviz/: multi_agent_with_image_nav2_view.rviz
code/src/multi_agent/worlds/: mining.world.sdf
code/src/shared_infrastructure/: CMakeLists.txt  MANIFEST.in  package.xml  setup.py
code/src/shared_infrastructure/config/: config.json
code/src/shared_infrastructure/launch/: shared_infrastructure_nodes_launch.py
code/src/shared_infrastructure/plugins/: CapsulePoseBridge.cc  CapsulePoseBridge.hh  DustPlumeSensorPlugin.cc  DustPlumeSensorPlugin.hh  GasEmitterPlugin.cc  GasEmitterPlugin.hh  GasSensorPlugin.cc  GasSensorPlugin.hh
code/src/shared_infrastructure/scripts/: shutdown_trigger_node
code/src/shared_infrastructure/shared_infrastructure/: hazard_types.py  ore_spawn_types.py  task_types.py  utils.py
code/src/shared_infrastructure/shared_infrastructure/nodes/: shutdown_trigger_node.py
code/src/shared_interfaces/: CMakeLists.txt  package.xml
code/src/shared_interfaces/msg/: BaseReturn.msg  DensityEstimationResult.msg  DustSensorResult.msg  HazardPose.msg  MissionStatus.msg  NavigationResult.msg  OnArrivalTask.msg  ToxicityResult.msg  UIOverrideMission.msg
code/src/shared_interfaces/srv/: ClassifyHazard.srv  DetectHazard.srv  DetectToxicGas.srv  InitialInspection.srv  NavigateRequest.srv  OrbitHazard.srv  OverrideMission.srv  PathPlanResult.srv  RequestPathPlan.srv  ScanIncident.srv
code/src/supervisory_agent/: CMakeLists.txt  MANIFEST.in  package.xml  setup.py
code/src/supervisory_agent/config/: mine_locations.json
code/src/supervisory_agent/launch/: supervisory_launch.py
code/src/supervisory_agent/scripts/: alert_receiver_node  mission_overrider_node  ui_coordinator.py  ui_interface_node
code/src/supervisory_agent/supervisory_agent/: data_loader.py
code/src/supervisory_agent/supervisory_agent/nodes/: alert_receiver_node.py  mission_overrider_node.py  ui_interface_node.py
docs/architecture/: system_architecture.md
docs/design/: ai_detection_strategy.md  conveyor_belt_classifier.md  mission_workflows.md
