<?xml version="1.0"?>
<package format="3">
  <name>material_handling_agent</name>  
  <version>0.0.0</version>
  <description>ROS2 Python package for the material handling agent in multi-agent mining system</description>

  <maintainer email="somi.murthyk@gmail.com">Somi Murthy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>shared_interfaces</build_depend>
  <exec_depend>shared_interfaces</exec_depend>

  <build_depend>shared_infrastructure</build_depend>
  <exec_depend>shared_infrastructure</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
