<?xml version="1.0"?>
<package format="3">
  <name>shared_infrastructure</name>
  <version>0.0.0</version>
  <description>Shared Python utilities and hazard types</description>
  <maintainer email="somi.murthyk@gmail.com">Somi Murthy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
