<?xml version="1.0"?>
<package format="3">
  <name>shared_interfaces</name>
  <version>0.0.0</version>
  <description>Shared ROS2 services and messages used across agents</description>
  <maintainer email="somi.murthyk@gmail.com">Somi Murthy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- std_msgs is required by ToxicityResult.msg -->
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- required by HazardPose.msg-->
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- generated type‑support at run‑time -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
